# sodiumoxide

./: .travis.yml  Cargo.toml  README.md  index.html
0.0.12/: search-index.js
libsodium-sys/: Cargo.toml
libsodium-sys/src/: core.rs
master/maidsafe_libsodium_sys/: constant.crypto_aead_chacha20poly1305_ABYTES.html  constant.crypto_aead_chacha20poly1305_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_NSECBYTES.html  constant.crypto_auth_BYTES.html  constant.crypto_auth_KEYBYTES.html  constant.crypto_auth_PRIMITIVE.html  constant.crypto_auth_hmacsha256_BYTES.html  constant.crypto_auth_hmacsha256_KEYBYTES.html  constant.crypto_auth_hmacsha512256_BYTES.html  constant.crypto_auth_hmacsha512256_KEYBYTES.html  constant.crypto_auth_hmacsha512_BYTES.html  constant.crypto_auth_hmacsha512_KEYBYTES.html  constant.crypto_box_BEFORENMBYTES.html  constant.crypto_box_BOXZEROBYTES.html  constant.crypto_box_MACBYTES.html  constant.crypto_box_NONCEBYTES.html  constant.crypto_box_PRIMITIVE.html  constant.crypto_box_PUBLICKEYBYTES.html  constant.crypto_box_SECRETKEYBYTES.html  constant.crypto_box_SEEDBYTES.html  constant.crypto_box_ZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BEFORENMBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BOXZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_MACBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_NONCEBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_PUBLICKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SECRETKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SEEDBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_ZEROBYTES.html  constant.crypto_core_hsalsa20_CONSTBYTES.html  constant.crypto_core_hsalsa20_INPUTBYTES.html  constant.crypto_core_hsalsa20_KEYBYTES.html  (+296 more)
src/: lib.rs  newtype_macros.rs
(+289 files in other folders)
