[package]
name = "sodiumoxide"
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "http://maidsafe.net/sodiumoxide/latest"
repository = "https://github.com/maidsafe/sodiumoxide"
readme = "README.md"
keywords = ["crypto", "NaCl", "libsodium"]
version = "0.0.5"
authors = ["dnaq"]
license = "MIT"

[dependencies]
libc = "*"
libsodium-sys = "*"
rustc-serialize = "*"

[dev-dependencies.cbor]
cbor = "*"

[features]
benchmarks = []
