[package]
name = "maidsafe_sodiumoxide"
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "http://maidsafe.net/sodiumoxide"
repository = "https://github.com/maidsafe/sodiumoxide"
readme = "README.md"
keywords = ["crypto", "NaCl", "libsodium"]
version = "0.0.8"
authors = ["dnaq"]
license = "MIT"

[dependencies]
libc = "*"
maidsafe_libsodium_sys = "*"
rustc-serialize = "*"

[dev-dependencies.cbor]
cbor = "*"

[features]
benchmarks = []
