[package]
name = "maidsafe_libsodium-sys"
description = "FFI binding to libsodium"
repository = "https://github.com/maidsafe/sodiumoxide.git"
keywords = ["libsodium", "NaCl", "crypto"]
version = "0.0.8"
authors = ["dnaq"]
license = "MIT"

[lib]
name = "maidsafe_libsodium_sys"
path = "lib.rs"

[dependencies]
libc = "*"

[build-dependencies]
pkg-config = "*"
